# labs

./: CMakeLists.txt  foos.cpp  foos.h  function.cpp  function.h  lab1.cpp  lab2.cpp  lab3.cpp  lab4A.cpp  lab4B.cpp  lab5.cpp  main.cpp  test.cpp  test1.cpp
Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  stack.cpp  stack.h
lab6/: CMakeLists.txt  ProperFraction.cpp  ProperFraction.h  main.cpp  test1.cpp  tests.cpp
lab7/: 2ndTerm.cpp  2ndTerm.h  functions.cpp  functions.h  main.cpp  studentAfterFirstTerm.cpp  studentAfterFirstTerm.h  students.cpp  students.h  tests.cpp
